--- a/scss/color.scss
+++ b/scss/color.scss
@@ -16,3 +16,6 @@ $orange: rgba(233, 151, 25, 1.00); // 橘色
 
 $font-grey: rgba(140, 145, 152, 1.00);  // 表單內提示文字
 $font-deep-black: rgba(32, 46, 50, 1.00); // 深黑色
+
+$red: rgba(255, 109, 74, 1.00);
+$yellow: rgba(255, 250, 231, 1.00);
