--- a/scss/space.scss
+++ b/scss/space.scss
@@ -50,6 +50,10 @@
   margin-bottom: 25px;
 }
 
+.m-t-25 {
+  margin-top: 25px;
+}
+
 .m-d-25 {
   margin-bottom: 25px;
 }
@@ -72,6 +76,10 @@
 
 .m-l-10 {
   margin-left: 10px;
+}
+
+.m-lr-10 {
+  margin: 0 10px;
 }
 
 
