--- a/css/font.css
+++ b/css/font.css
@@ -6,6 +6,8 @@ p { padding: 0; margin: 0; }
 
 .line-h-80 { line-height: 80px; }
 
+.line-h-43 { line-height: 43px; }
+
 .menu-title { text-align: left; font-size: 2rem; color: #202e32; font-weight: bolder; padding: 30px 0; }
 
 .t-b-28 { font-size: 2rem; font-weight: bolder; }
@@ -14,6 +16,10 @@ p { padding: 0; margin: 0; }
 
 .t-grey-15 { font-size: 1.15rem; color: #8c9198; }
 
+.t-black-15 { display: inline-block; font-size: 1.15rem; color: #202e32; }
+
+.t-blue-15 { display: inline-block; font-size: 1.15rem; color: #006fff; }
+
 .topName { display: inline-block; font-size: 1.38rem; line-height: 80px; padding-right: 15px; }
 
 .t-blue-16 { display: inline-block; font-size: 1.23rem; color: #006fff; }
@@ -21,3 +27,7 @@ p { padding: 0; margin: 0; }
 .t-blue-20 { display: inline-block; font-size: 1.53rem; color: #006fff; }
 
 .t-black-20 { display: inline-block; font-size: 1.53rem; color: #202e32; }
+
+.t-file { display: inline-block; font-size: 1rem; color: #202e32; line-height: 35px; margin: 0 10px; }
+
+.t-file-g { display: inline-block; font-size: 1rem; color: #8c9198; line-height: 35px; margin: 0 10px; }
