--- a/css/input.css
+++ b/css/input.css
@@ -24,3 +24,7 @@ label { padding: 0; margin-right: 12px; cursor: pointer; }
 .select-style { padding: 0; margin: 0; border: 1px solid #dcdbdc; width: 100%; border-radius: 3px; overflow: hidden; background-color: #fff; background: #fff url(../img/se_icon.svg) no-repeat 100% 50%; }
 .select-style select { font-size: 1.1rem; padding: 10px 15px; width: 100%; border: none; box-shadow: none; background-color: transparent; background-image: none; -webkit-appearance: none; -moz-appearance: none; appearance: none; color: #8c9198; }
 .select-style select:focus { outline: none; color: #202e32; }
+
+.statusCheck { display: inline-block; height: 18px; appearance: button; -moz-appearance: button; /* Firefox */ -webkit-appearance: button; }
+
+.statusCheck2 { display: inline-block; margin-left: 0; font-size: 1rem; color: #202e32; }
