--- a/css/link.css
+++ b/css/link.css
@@ -12,18 +12,24 @@ button { border: 0; }
 
 .btn-half-blue { background-color: #4397ff; }
 .btn-half-blue.icon-search { line-height: 30px; }
+.btn-half-blue.icon-icon_mail { line-height: 30px; }
 
 .btn-half-grey { background-color: #dcdbdc; }
+.btn-half-grey.lh-30 { line-height: 30px; }
 
 .btn-half-orange { background-color: #e99719; }
 .btn-half-orange.icon-send { line-height: 29px; }
+.btn-half-orange.wF { width: 100%; }
 
 .btn-half-blueG { background-color: rgba(117, 132, 153, 0.5); }
 .btn-half-blueG.icon-eye { line-height: 24px; }
+.btn-half-blueG.icon-icon04 { line-height: 24px; }
 
 .btn-outline-blue { display: inline-block; padding: 8px 20px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; border: 1px solid #4397ff; color: #4397ff; font-size: 1rem; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; }
 .btn-outline-blue:hover, .btn-outline-blue:active { background-color: #4397ff; color: white; }
 .btn-outline-blue.icon-add { line-height: 30px; }
+.btn-outline-blue.outlineNobg { padding: 5px 20px; background-color: white; }
+.btn-outline-blue.outlineNobg:hover, .btn-outline-blue.outlineNobg:active { background-color: #4397ff; color: white; }
 
 .menuArea { display: inline-block; width: calc(100% / 7 - 40px * 6 / 7); max-height: 115px; background-color: white; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; float: left; padding: 15px; margin-left: 40px; margin-bottom: 40px; }
 .menuArea:nth-child(7n+1) { margin-left: 0; }
@@ -43,3 +49,14 @@ button { border: 0; }
 .tag:hover, .tag:active { color: #006fff; }
 .tag:hover:after, .tag:active:after { color: #758499; }
 .tag:last-child:after { display: none; }
+
+.icon-cancel { display: inline-block; color: #ff6d4a; background-color: transparent; margin-top: 11px; }
+
+.icon-add_circle { display: inline-block; color: #006fff; font-size: 2rem; background-color: transparent; }
+
+.link_order_info { display: inline-block; cursor: pointer; width: 120px; font-size: 1.1rem; color: #202e32; background-color: rgba(67, 151, 255, 0.3); -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; padding: 10px 0; float: left; text-align: center; margin-right: 5px; }
+.link_order_info:first-child { -webkit-border-top-left-radius: 3px; -moz-border-radius-topleft: 3px; border-top-left-radius: 3px; }
+.link_order_info:last-child { -webkit-border-top-right-radius: 3px; -moz-border-radius-topright: 3px; border-top-right-radius: 3px; }
+.link_order_info.loi_s { color: white; background-color: #4397ff; }
+.link_order_info.loi_s:hover, .link_order_info.loi_s:active { color: white; background-color: #4397ff; }
+.link_order_info:hover, .link_order_info:active { color: white; background-color: #4397ff; }
