--- a/scss/other.scss
+++ b/scss/other.scss
@@ -1,6 +1,63 @@
 @import "Ginkgo";
 @import "color";
 
+// 光箱
+#myModel {
+  // display: inline-block;
+  display: none;
+
+  &.showModel {
+    display: flex;
+  }
+  
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(33, 33, 33, .8);
+
+  .ac_outer {
+    width: 100%;
+  
+    .model_boxs {
+      display: none;
+
+      &.show {
+          display: inline-block;
+      }
+
+      width: 100%;
+      max-width: 600px;
+      background-color: white;
+      @include border-radius(4px);
+      @include clearfix();
+      margin: 50px 0;
+      padding: 20px 15px;
+
+      @include range-width(0, 450px) {
+        max-width: auto;
+        margin: 0;
+        @include border-radius(0);
+      }
+
+      .t-close {
+        display: inline-block;
+        font-size: 1.38rem;
+        font-weight: bold;
+        cursor: pointer;
+        color: $font-deep-black;
+        float: right;
+        @include transition(all .3s);
+      }
+    }
+  }
+}
+
 .menuArea {
   p {
     display: inline-block;
@@ -92,6 +149,10 @@
 
 .table-box10 {
   width: 10%;
+
+  &.t-red {
+    color: $red;
+  }
 }
 
 .table-box20 {
@@ -134,6 +195,12 @@
   margin: 25px 0;
 }
 
+.splitLine_title {
+  display: inline-block;
+  width: 100%;
+  border-bottom: 2px solid $blue_l_30;
+  margin: 25px 0;
+}
 
 .proListImg {
   display: inline-block;
@@ -145,6 +212,24 @@
 }
 
 
+.order_info {
+  display: inline-block;
+  width: 100%;
+  // 控制按鈕分頁，設定預設值是沒有顯示
+  display: none;
+
+  &.order_info_show {
+    display: inline-block;
+  } 
+}
+
+.order_boxs {
+  display: inline-block;
+  width: 100%;
+  background-color: white;
+  @include box-shadow(0 1px 1px rgba(220, 219, 220, .5));
+  overflow: hidden;
+}
 
 
 
