--- a/scss/public.scss
+++ b/scss/public.scss
@@ -75,6 +75,54 @@ body {
   }
 }
 
+
+.box19_l, .box19_r {
+  display: inline-block;
+  float: left;
+}
+
+.box19_l {
+  width: calc(90% - 30px);
+  margin-right: 30px;
+}
+.box19_r {
+  width: 10%;
+}
+
+.box37_l, .box37_r {
+  display: inline-block;
+  float: left;
+}
+
+.box37_l {
+  width: 32%;
+
+  &.re37_l {
+    width: 32%
+  }
+}
+.box37_r {
+  width: calc(68% - 30px);
+  margin-left: 30px;
+
+  &.re37_r {
+    margin-right: 30px;
+    margin-left: 0;
+  }
+}
+
+.box82_l, .box82_r {
+  display: inline-block;
+  float: left;
+}
+
+.box82_l {
+  width: 80%;
+}
+.box82_r {
+  width: 20%;
+}
+
 .box50 {
   display: inline-block;
   width: 50%;
@@ -180,6 +228,10 @@ header {
     left: 0;
     bottom:0;
     padding-left: 30px;
+
+    &.tagBoxC {
+      width: calc(100% - 273px);
+    }
   }
 }
 
@@ -334,12 +386,59 @@ header {
   padding: 30px;
   text-align: left;
   @include clearfix();
+
+  &.centNoW {
+    background-color: transparent;
+    padding: 0;
+    min-height: 0;
+  }
+}
+
+.centBoxRL {
+  display: inline-block;
+  width: calc(100% - 285px);
+  float: left;
+}
+.centBoxRR {
+  display: inline-block;
+  width: 285px;
+  padding-left: 30px;
+  float: left;
+}
+
+
+.boxsWhite {
+  display: inline-block;
+  width: 100%;
+  background-color: white;
+  @include border-radius(3px);
+  padding: 30px;
+
+  &.boxW15 {
+    padding: 20px 15px !important;
+  }
+}
+
+.boxsYellow {
+  display: inline-block;
+  width: 100%;
+  @include border-radius(3px);
+  padding: 30px;
+  background-color: $yellow;
 }
 
 .numBox {
   display: inline-block;
   float: right;
   @include clearfix();
+}
+
+.updateBox {
+  display: inline-block;
+  width: 100%;
+  border: 1px dotted $blue_l_30;
+  @include border-radius(3px);
+  padding: 15px;
 }
 
 
